// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer demos > demo: Basic 1`] = `
"<button class="ant-btn ant-btn-solid ant-btn-md" type="button">
  <!--v-if-->
  <!--v-if--><span class="ant-btn-content">Open Drawer</span>
</button>
<!--teleport start-->

<!-- Mask -->
<transition-stub name="ant-fade" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!-- Drawer -->
<transition-stub name="ant-slide-right" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>

<!--teleport end-->"
`;

exports[`Drawer demos > demo: Extra 1`] = `
"<button class="ant-btn ant-btn-solid ant-btn-md" type="button">
  <!--v-if-->
  <!--v-if--><span class="ant-btn-content">Open Drawer with extra</span>
</button>
<!--teleport start-->

<!-- Mask -->
<transition-stub name="ant-fade" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!-- Drawer -->
<transition-stub name="ant-slide-right" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>

<!--teleport end-->"
`;

exports[`Drawer demos > demo: Footer 1`] = `
"<button class="ant-btn ant-btn-solid ant-btn-md" type="button">
  <!--v-if-->
  <!--v-if--><span class="ant-btn-content">Open Drawer with footer</span>
</button>
<!--teleport start-->

<!-- Mask -->
<transition-stub name="ant-fade" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!-- Drawer -->
<transition-stub name="ant-slide-right" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>

<!--teleport end-->"
`;

exports[`Drawer demos > demo: Placement 1`] = `
"<div class="ant-space ant-space-horizontal ant-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <div class="ant-radio-group ant-radio-group-default ant-radio-group-outline" role="radiogroup"><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" role="radio" aria-checked="false"><span class="ant-radio-inner"></span></span><span class="ant-radio-label">Top</span></label><label class="ant-radio-wrapper ant-radio-wrapper-checked"><span class="ant-radio ant-radio-checked"><input type="radio" class="ant-radio-input" checked="" role="radio" aria-checked="true"><span class="ant-radio-inner"></span></span><span class="ant-radio-label">Right</span></label><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" role="radio" aria-checked="false"><span class="ant-radio-inner"></span></span><span class="ant-radio-label">Bottom</span></label><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" role="radio" aria-checked="false"><span class="ant-radio-inner"></span></span><span class="ant-radio-label">Left</span></label></div><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Open</span>
  </button>
</div>
<!--teleport start-->

<!-- Mask -->
<transition-stub name="ant-fade" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!-- Drawer -->
<transition-stub name="ant-slide-right" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>

<!--teleport end-->"
`;

exports[`Drawer demos > demo: Size 1`] = `
"<div class="ant-space ant-space-horizontal ant-space-align-center" style="column-gap: 8px; row-gap: 8px;"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Default Size</span>
  </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Large Size</span>
  </button></div>
<!--teleport start-->

<!-- Mask -->
<transition-stub name="ant-fade" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!-- Drawer -->
<transition-stub name="ant-slide-right" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>

<!--teleport end-->"
`;
